[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Sprites/torreta inseto contornada.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enimies/Torreta/Turret.gd" type="Script" id=2]
[ext_resource path="res://Assets/Enimies/Enemy_base.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Aim.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30.473, 32.5648 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.0914, 33.7916 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30.9617, 33.5657 )

[sub_resource type="CircleShape2D" id=4]
radius = 250.0

[node name="KinematicBody2D" instance=ExtResource( 3 )]
collision_layer = 16
collision_mask = 19
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 1 )

[node name="HurtBox" parent="." index="2"]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 2 )

[node name="Hitbox" parent="." index="3"]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 3 )

[node name="Stats" parent="." index="4"]
MaxHealth = 2

[node name="VisibilityNotifier2D" parent="." index="5"]
visible = false

[node name="StunTimer" type="Timer" parent="." index="6"]

[node name="Range" parent="." index="7" instance=ExtResource( 4 )]
visible = false

[node name="CollisionShape2D" parent="Range" index="0"]
visible = false
shape = SubResource( 4 )

[node name="ShootTimer" type="Timer" parent="." index="8"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]

[editable path="HurtBox"]

[editable path="Hitbox"]

[editable path="Range"]
